force-app/main/default/objects/Capacity_Snapshot__c/Capacity_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Capacity Snapshot</label>
    <nameField>
        
        <displayFormat>CS-{0000}</displayFormat>
        
        <label>Capacity Snapshot Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Capacity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>