force-app/main/default/objects/Capacity_Snapshot__c/fields/As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Of_Date__c</fullName>
    <inlineHelpText>Date this snapshot was taken</inlineHelpText>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>