force-app/main/default/objects/Capacity_Snapshot__c/fields/Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Capacity__c</fullName>
    <inlineHelpText>Available Capacity stands for the customers that have dropped off and therefore have opened up capacity in the project that will have to be filled by new customers</inlineHelpText>
    <label>Available Capacity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>