force-app/main/default/objects/Capacity_Snapshot__c/fields/Minimum_Waitlist_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Waitlist_Capacity__c</fullName>
    <formula>Shared_Solar_System__r.Total_System_Size_kWh_DC__c * 0.02</formula>
    <inlineHelpText>2% of the System&apos;s total system size (for non-Waitlist systems)</inlineHelpText>
    <label>Minimum Waitlist Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>