force-app/main/default/objects/Capacity_Snapshot__c/fields/QC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>QC_Capacity__c</fullName>
    <inlineHelpText>UAS&apos;s kW DC of Opportunities in QC for this System</inlineHelpText>
    <label>QC Capacity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>