force-app/main/default/objects/Capacity_Snapshot__c/fields/Waitlist_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Capacity__c</fullName>
    <inlineHelpText>Sum of Future kW DC values on related Opportunity UASes</inlineHelpText>
    <label>Waitlist Capacity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>