force-app/main/default/objects/Capacity_Snapshot__c/fields/X45_60_Day_Past_Due_Active_kW__c.field-meta.xml
<CustomField>
    <fullName>X45_60_Day_Past_Due_Active_kW__c</fullName>
    <label>45-60 Day Past Due Active kW</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>